--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,13 @@ body {
 .p-5 {
   padding: 5px;
 }
+.d-visilibity {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background: #000;
+  opacity: 0.5;
+  z-index: -1;
+}
