--- a/src/components/Drawer/style.css
+++ b/src/components/Drawer/style.css
@@ -49,7 +49,7 @@ p {
 .audio-player-lg .audio-img-lg {
   width: 300px;
   height: 240px;
-  margin: 60px auto auto 10px;
+  margin: 60px auto auto auto;
   position: relative;
   align-content: center;
 }
