feat(Drawer,AudioPlayer) next and prev button , track progress indicator

--- a/src/components/Drawer/style.css
+++ b/src/components/Drawer/style.css
@@ -68,6 +68,7 @@ p {
 }
 .audio-player-progress input[type="range"] {
   width: 100%;
+  -webkit-appearance: none;
   height: 5px;
   border-radius: 3px;
 }
