--- a/src/components/Drawer/style.css
+++ b/src/components/Drawer/style.css
@@ -5,7 +5,7 @@
   right: 0;
   padding: 10px 20px;
   background: grey;
-
+  background: url(./../../assets/drawer-bg.png);
   background-size: cover;
   background-position: center;
   border-top-right-radius: 20px;
@@ -13,10 +13,18 @@
   /* height: 50px; */
   transition: height 0.5s ease-in-out;
 }
+
+.drawer._h-sm {
+  height: 35px;
+}
+.drawer._h-md {
+  height: 70px;
+}
 .slide-up-btn {
   width: 50px;
   height: 10px;
   background: whitesmoke;
+
   border-radius: 10px;
   margin: 0 auto;
 }
@@ -98,4 +106,9 @@ h3 {
   background: white;
   margin-left: 20px;
   margin-right: 20px;
+}
+.like-btn {
+  height: 30px;
+  padding: 10px;
+  margin-left: auto;
 }
