--- a/src/components/Drawer/style.css
+++ b/src/components/Drawer/style.css
@@ -110,5 +110,19 @@ h3 {
 .like-btn {
   height: 30px;
   padding: 10px;
+
   margin-left: auto;
+}
+.heart-icon {
+  font-size: 30px;
+  color: white;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+}
+.heart-icon.liked {
+  color: red;
 }
